# ckanext-biodigiknow

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/biodigiknow/: cli.py  helpers.py  plugin.py  views.py
ckanext/biodigiknow/assets/: script.js  webassets.yml
ckanext/biodigiknow/logic/: action.py  auth.py  schema.py  validators.py
ckanext/biodigiknow/schemas/: journal-article.yaml  learning-resource.yaml  presets.yaml  publication-general.yaml  resource-hub.yaml  software-application.yaml  web-resource.yaml
ckanext/biodigiknow/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/biodigiknow/tests/logic/: test_action.py  test_auth.py  test_validators.py
