[project]
name = "ckanext-biodigiknow"
version = "0.0.1"
description = "Biodiversity digitization resources knowledge base extension for CKAN"
readme = "README.md"
authors = [
    {name = "Fritz J. Pichardo Marcano", email = "fjp18b@fsu.edu"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "biodiversity", "digitization_resources", "knowledgebase", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/Florida State University/ckanext-biodigiknow"

[project.entry-points."ckan.plugins"]
biodigiknow = "ckanext.biodigiknow.plugin:BiodigiknowPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
